# src/types/responses/informplus/calculationmethods/calculationmethodidentifier.response.ts
@@ -1,0 +1,16 @@
+export interface ICalculationMethodIdentifierGetResponse {
+  calculationMethod: CalculationMethodIdentifier
+}
+
+export interface CalculationMethodIdentifier {
+  identifier: string
+  label: string
+  description: string
+  fields?: FieldIdentifier[]
+}
+
+export interface FieldIdentifier {
+  identifier: string
+  label: string
+  description: string
+}
