# src/types/responses/informplus/calculationmethods/calculationmethods.response.ts
@@ -1,0 +1,9 @@
+export interface ICalculationMethodGetResponse {
+  'calculationMethod-array': CalculationMethodArray[]
+}
+
+export interface CalculationMethodArray {
+  identifier: string
+  label: string
+  description: string
+}
